--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /.vs/GPA546/FileContentIndex/99cd2f89-93f6-4adf-8679-08ff12cbb06c.vsidx
 /.vs/GPA546/FileContentIndex/fc6a58f3-9a6c-47a4-b94e-12cabfde1450.vsidx
 /.vs/GPA546/FileContentIndex/bff53eeb-331c-4617-b18e-cc711cd1ac73.vsidx
+*.vsidx
